k8s/httproute/auth_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-route
  namespace: opslora-test-ns
  labels:
    app: auth
spec:
  parentRefs:
   - name: opslora-gateway
     namespace: opslora-gateway-ns
  rules:
    - match:
       - path:
           type: PathPrefix
           value: /api/v1/auth
      backendRefs:
        - name: auth-service
          port: 3000
